make use of uncompressed map data